--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,10 @@
     "gsap": "^3.12.4",
     "zod": "^3.22.4",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.45",
