feat: add Node Maintainer dashboard with multiple tabs for configuration and monitoring
- Implemented NodeConfigTab for configuring camera, network, and detection parameters.
- Created OverviewTab to display live camera feed, health metrics, road status, and node information.
- Developed PolygonsTab for managing lane polygons with add/edit functionality.
- Introduced RoadConfigTab for configuring lanes, lane status, and speed limits.
- Added custom styles for the Node Maintainer feature and typography system.
- Built NodeMaintainerDashboard to integrate all components with responsive design.

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,6 @@ pnpm-debug.log*
 dist/
 build/
 out/
-*.log
 
 # =========================
 # Environment files
@@ -37,7 +36,22 @@ out/
 Thumbs.db
 
 # =========================
-# Optional caches
+# Logs & caches
 # =========================
+logs/
+*.log
 .cache/
 .tmp/
+
+# =========================
+# Backup & temporary files
+# =========================
+*.bak
+*.swp
+*.swo
+
+# =========================
+# Node.js / TypeScript specific
+# =========================
+*.tsbuildinfo
+coverage/
