--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,18 +1,54 @@
-# Dependencies
+# =========================
+# Node.js / npm
+# =========================
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
-# Environment variables
+# =========================
+# Build outputs
+# =========================
+dist/
+build/
+
+# =========================
+# Environment files
+# =========================
 .env
 .env.local
 .env.*.local
-uploads/
-# Logs
+
+# =========================
+# IDE / Editor
+# =========================
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# =========================
+# System files
+# =========================
+.DS_Store
+Thumbs.db
+
+# =========================
+# Logs & caches
+# =========================
 logs/
 *.log
-npm-debug.log*
+.cache/
+.tmp/
 
-# Testing
+# =========================
+# Testing & coverage
+# =========================
 coverage/
+.nyc_output/
 
-# Build
-dist/
+# =========================
+# Uploads (user-generated files)
+# =========================
+uploads/
