--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "@turf/turf": "^6.5.0",
     "axios": "^1.6.2",
     "bcrypt": "^6.0.0",
@@ -30,14 +31,17 @@
     "multer": "^2.0.2",
     "pg": "^8.18.0",
     "pg-hstore": "^2.3.4",
+    "prisma": "^7.3.0",
     "sequelize": "^6.37.7",
     "socket.io": "^4.6.1",
     "uuid": "^13.0.0",
     "winston": "^3.11.0",
+    "ws": "^8.19.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
     "form-data": "^4.0.5",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "prisma": "^5.22.0"
   }
 }
