--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # Node.js / npm
 # =========================
 node_modules/
+frontend/node_modules/
+frontend/node_modules/.vite/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
