--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,15 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "db:push": "npx prisma db push",
+    "db:seed": "node prisma/seed.js",
+    "db:reset": "npx prisma db push --force-reset && node prisma/seed.js",
+    "db:studio": "npx prisma studio",
+    "prisma:generate": "npx prisma generate"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   },
   "keywords": [
     "express",
@@ -16,6 +24,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.10.0",
     "@turf/turf": "^6.5.0",
     "axios": "^1.6.2",
     "bcrypt": "^6.0.0",
@@ -38,6 +47,7 @@
   },
   "devDependencies": {
     "form-data": "^4.0.5",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "prisma": "^5.10.0"
   }
 }
