--- a/backend/package.json
+++ b/backend/package.json
@@ -27,11 +27,12 @@
     "@prisma/client": "^5.10.0",
     "@turf/turf": "^6.5.0",
     "axios": "^1.6.2",
-    "bcrypt": "^6.0.0",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.0",
