--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "jest": "^30.2.0"
+  },
+  "dependencies": {
+    "socket.io-client": "^4.8.3"
   }
 }
